--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -3,7 +3,7 @@
 *::before
   margin: 0
   padding: 0
-  box-sizing: inherit; /*Inherits from body */
+  box-sizing: inherit
 
 body
   background-color: lightblue
