--- a/sass/base/_utilities.sass
+++ b/sass/base/_utilities.sass
@@ -15,12 +15,20 @@
 
 .old-style
   font-variant-numeric: oldstyle-nums
+  
 
 .big-text
   font-size: 20px !important
 
+.small-text 
+  font-size: 15px
+
 .dark
   color: $text-dark
+
+.text-lg 
+  font-size: 24px !important
+  
 
 .caps
   font-variant: small-caps
@@ -97,3 +105,5 @@
   a, a:visited
     color: $primary-color
     text-decoration: none
+
+
