--- a/sass/components/_profilepic.sass
+++ b/sass/components/_profilepic.sass
@@ -10,7 +10,7 @@
     width: 170px
     top: 40px
     border-radius: 50%
-    background-image: url(../profile.png)
+    background-image: url(../hero-me.jpeg)
     background-size: cover
     background-position: center
     background-repeat: no-repeat
