--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ body {
   font-size: 24px !important;
 }
 
+.text-md {
+  font-size: 18px !important;
+}
+
 .caps {
   font-variant: small-caps;
 }
