--- a/sass/components/_skills.sass
+++ b/sass/components/_skills.sass
@@ -15,22 +15,20 @@
   width: 75%
 
 #html
-  width: 100%
-
-#css
-  width: 100%
-
-#scss
   width: 95%
 
+
 #js
-  width: 90%
+  width: 88%
 
 #react
-  width: 85%
+  width: 75%
 
 #java
-  width: 80%
+  width: 85%
 
 #sql
-  width: 75%
+  width: 90%
+
+#python 
+  width: 80%
